<resources>
    <string name="app_name">ESP</string>
    <string name="login_hint">User Name / Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="title_activity_main">Main</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_blank_fragment">Home blank fragment</string>
    <string name="search_blank_fragment">Search blank fragment</string>
    <string name="camera_blank_fragment">Camera blank fragment</string>
    <string name="heart_blank_fragment">Heart blank fragment</string>
    <string name="profile_blank_fragment">Profile blank fragment</string>
    <string name="terms">By signing up, you agree to our\n  Terms &amp; Privacy Policy</string>
    <string name="create_event_name">\t\tEvent Name</string>
    <string name="create_event_photo_video">\t\tPhoto/Video</string>
    <string name="create_event_location">\t\tLocation</string>
    <string name="create_event_time">\t\tTime</string>

    <string-array name="CountryCodes">
        <item>AF,93</item>
        <item>AL,355</item>
        <item>DZ,213</item>
        <item>AD,376</item>
        <item>AO,244</item>
        <item>AR,54</item>
        <item>AM,374</item>
        <item>AW,297</item>
        <item>AU,61</item>
        <item>AT,43</item>
        <item>AZ,994</item>
        <item>BH,973</item>
        <item>BD,880</item>
        <item>BY,375</item>
        <item>BE,32</item>
        <item>BZ,501</item>
        <item>BJ,229</item>
        <item>BT,975</item>
        <item>BO,591</item>
        <item>BA,387</item>
        <item>BW,267</item>
        <item>BR,55</item>
        <item>BN,673</item>
        <item>BG,359</item>
        <item>BF,226</item>
        <item>MM,95</item>
        <item>BI,257</item>
        <item>KH,855</item>
        <item>CM,237</item>
        <item>CA,1</item>
        <item>CV,238</item>
        <item>CF,236</item>
        <item>TD,235</item>
        <item>CL,56</item>
        <item>CN,86</item>
        <item>CX,61</item>
        <item>CC,61</item>
        <item>CO,57</item>
        <item>KM,269</item>
        <item>CG,242</item>
        <item>CD,243</item>
        <item>CK,682</item>
        <item>CR,506</item>
        <item>HR,385</item>
        <item>CU,53</item>
        <item>CY,357</item>
        <item>CZ,420</item>
        <item>DK,45</item>
        <item>DJ,253</item>
        <item>TL,670</item>
        <item>EC,593</item>
        <item>EG,20</item>
        <item>SV,503</item>
        <item>GQ,240</item>
        <item>ER,291</item>
        <item>EE,372</item>
        <item>ET,251</item>
        <item>FK,500</item>
        <item>FO,298</item>
        <item>FJ,679</item>
        <item>FI,358</item>
        <item>FR,33</item>
        <item>PF,689</item>
        <item>GA,241</item>
        <item>GM,220</item>
        <item>GE,995</item>
        <item>DE,49</item>
        <item>GH,233</item>
        <item>GI,350</item>
        <item>GR,30</item>
        <item>GL,299</item>
        <item>GT,502</item>
        <item>GN,224</item>
        <item>GW,245</item>
        <item>GY,592</item>
        <item>HT,509</item>
        <item>HN,504</item>
        <item>HK,852</item>
        <item>HU,36</item>
        <item>IN,91</item>
        <item>ID,62</item>
        <item>IR,98</item>
        <item>IQ,964</item>
        <item>IE,353</item>
        <item>IM,44</item>
        <item>IL,972</item>
        <item>IT,39</item>
        <item>CI,225</item>
        <item>JP,81</item>
        <item>JO,962</item>
        <item>KZ,7</item>
        <item>KE,254</item>
        <item>KI,686</item>
        <item>KW,965</item>
        <item>KG,996</item>
        <item>LA,856</item>
        <item>LV,371</item>
        <item>LB,961</item>
        <item>LS,266</item>
        <item>LR,231</item>
        <item>LY,218</item>
        <item>LI,423</item>
        <item>LT,370</item>
        <item>LU,352</item>
        <item>MO,853</item>
        <item>MK,389</item>
        <item>MG,261</item>
        <item>MW,265</item>
        <item>MY,60</item>
        <item>MV,960</item>
        <item>ML,223</item>
        <item>MT,356</item>
        <item>MH,692</item>
        <item>MR,222</item>
        <item>MU,230</item>
        <item>YT,262</item>
        <item>MX,52</item>
        <item>FM,691</item>
        <item>MD,373</item>
        <item>MC,377</item>
        <item>MN,976</item>
        <item>ME,382</item>
        <item>MA,212</item>
        <item>MZ,258</item>
        <item>NA,264</item>
        <item>NR,674</item>
        <item>NP,977</item>
        <item>NL,31</item>
        <item>AN,599</item>
        <item>NC,687</item>
        <item>NZ,64</item>
        <item>NI,505</item>
        <item>NE,227</item>
        <item>NG,234</item>
        <item>NU,683</item>
        <item>KP,850</item>
        <item>NO,47</item>
        <item>OM,968</item>
        <item>PK,92</item>
        <item>PW,680</item>
        <item>PA,507</item>
        <item>PG,675</item>
        <item>PY,595</item>
        <item>PE,51</item>
        <item>PH,63</item>
        <item>PN,870</item>
        <item>PL,48</item>
        <item>PT,351</item>
        <item>PR,1</item>
        <item>QA,974</item>
        <item>RO,40</item>
        <item>RU,7</item>
        <item>RW,250</item>
        <item>BL,590</item>
        <item>WS,685</item>
        <item>SM,378</item>
        <item>ST,239</item>
        <item>SA,966</item>
        <item>SN,221</item>
        <item>RS,381</item>
        <item>SC,248</item>
        <item>SL,232</item>
        <item>SG,65</item>
        <item>SK,421</item>
        <item>SI,386</item>
        <item>SB,677</item>
        <item>SO,252</item>
        <item>ZA,27</item>
        <item>KR,82</item>
        <item>ES,34</item>
        <item>LK,94</item>
        <item>SH,290</item>
        <item>PM,508</item>
        <item>SD,249</item>
        <item>SR,597</item>
        <item>SZ,268</item>
        <item>SE,46</item>
        <item>CH,41</item>
        <item>SY,963</item>
        <item>TW,886</item>
        <item>TJ,992</item>
        <item>TZ,255</item>
        <item>TH,66</item>
        <item>TG,228</item>
        <item>TK,690</item>
        <item>TO,676</item>
        <item>TN,216</item>
        <item>TR,90</item>
        <item>TM,993</item>
        <item>TV,688</item>
        <item>AE,971</item>
        <item>UG,256</item>
        <item>GB,44</item>
        <item>UA,380</item>
        <item>UY,598</item>
        <item>US,1</item>
        <item>UZ,998</item>
        <item>VU,678</item>
        <item>VA,39</item>
        <item>VE,58</item>
        <item>VN,84</item>
        <item>WF,681</item>
        <item>YE,967</item>
        <item>ZM,260</item>
        <item>ZW,263</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friends">Friends</string>
    <string name="in_a_relationship_with">In a Relationship with</string>
    <string name="maria_santisima">Maria Santisima</string>
    <string name="my_events">My Events</string>
    <string name="my_info">My Info</string>
    <string name="test_testing">Test Testing</string>
    <string name="went_to_university_of_the_philippines">Went to University of the Philippines</string>
    <string name="works_at_international_company">Works at International Company</string>

</resources>
